works, now to  understand the HOW

--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
         <title></title>
     </head>
     <body>
+    
+    <div class="myForm">
+        <form>
+            <input type="text" name="zipcode" placeholder="Input zipcode">
+            <input type="text" name="group" placeholder="Input area of interest">
+        </form>
+        <a href="#/results" class="button">Submit</a>
+    </div>
+
+    <hr>
+
         <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
     </body>
     </html>
