--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     </head>
     <body>
     
+    <h2>Meetup App</h2>
+    <br>
     <div class="myForm">
         <form>
             <input type="text" name="zipcode" placeholder="Input zipcode">
@@ -15,7 +17,7 @@
         <a href="#/results" class="button">Submit</a>
     </div>
 
-    <hr>
+    
 
         <script type="text/javascript" src="./bower_components/Loader/loader.js" id="loaderjs" data-app="./js/app.js"></script>
     </body>
